src/app/header/header.component.scss
/*========================= Header Text and Icon Behaviors and Queries ==========================*/

/* ~~variables ~~ */
$bg-color: #21295C;
$ich-color: #66c7f4;
$ica-color: #e52d6b;
$ic-color: #ffffff;

/*courtesy of Rimian and Alex Guerrero, July 1, 2013, from https://stackoverflow.com/questions/12788262/sass-browser-vendor-prefixes#17399532
/* ~~ vendor prefix formula ~~ */

@mixin vendor-prefix($name, $value) {
  @each $vendor in ('-webkit-', '-moz-', '-ms-', '-o-', '') {
    #{$vendor}#{$name}: #{$value};
  }
}

/*========================= Header Text and Icon Behaviors and Queries ==========================*/

#logo{
  width: 3.5rem;
  margin: 1rem;
  filter: drop-shadow(0 0 .1em $ich-color);
}

header{
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: flex-start;
  h1{
    font-family: 'Courgette', cursive;
    padding: .5rem 0 0 0;
    text-shadow: 0 0 .05em $ich-color;
  }
}

#site-header{
  @include vendor-prefix('animation', 'fadeinheader .7s ease-in-out');
}

@keyframes fadeinheader {
  0%    { opacity: 0; }
  100%  { opacity: 1; }
}

